made some changes to logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1053,3 +1053,28 @@ section {
   color: #fff;
   text-decoration: none;
 }
+
+
+#hero .btn-watch-video {
+  padding-top: 20px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  transition: 0.5s;
+  margin: 10px 0 0 25px;
+  color: #fff;
+  line-height: 1;
+}
+
+#hero .btn-watch-video i {
+  line-height: 0;
+  color: #fff;
+  font-size: 32px;
+  transition: 0.3s;
+  margin-right: 8px;
+}
+
+#hero .btn-watch-video:hover i {
+  color: orange;
+}
+
