--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="getstarted scrollto" href="#get-started">Fork on Github</a></li>
+          <li><a class="getstarted scrollto" href="https://github.com/simran2104/Language-Translator-Web-App">Fork on Github</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
